# apocalyptosis

./: Cargo.toml  LICENSE.md  Makefile  README.md
LICENSES/: LICENSE.Bitstream
assets/data/: basetypes.toml  define.basetypes.toml  define.followers.toml  define.regions.toml  regions.toml
assets/locales/en-US/: bases.ftl  ui.ftl
assets/text/en-US/: bases.ftl  debug.ftl  funds.ftl  main-menu.ftl  regions.ftl  save-load.ftl  ui.ftl
resources/: pause.xcf
src/: bases.rs  common.rs  constants.rs  date.rs  followers.rs  funds.rs  lib.rs  locales.rs  main.rs  main_loop.rs  main_menu.rs  menu.rs  regions.rs  rng.rs  save_load.rs  state.rs  suspicion.rs  text.rs  time.rs  ui.rs
src/ui/: buttons.rs  dialog.rs  main_menu.rs  menu.rs  mod.rs  regions.rs  save_load.rs
