[package]
name = "cultists"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
bevy = {
    version = "0.18.1",
    default-features = false,
    features = ["2d", "file_watcher", "jpeg", "wayland"],
}
bevy_common_assets = { version = "0.16.0", features = ["toml"] }
serde = "1.0.228"
serde_derive = "1.0.228"

[profile.dev.package."*"]
opt-level = 3
